test/SemanticAnalysis/Shadowing/VariableShadowVariable.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

datatype ParentType = ChildType0() | ChildType1(int value);

import ParentType g();

void f() {
	unused int value = 4;
	if (true) {
		// CHECK: .loci:12:10: error: variable 'value' shadows existing variable
		unused int value = 5;
	}
	
	switch (g()) {
		case ChildType0() { }
		// CHECK: .loci:18:26: error: variable 'value' shadows existing variable
		case ChildType1(unused int value) { }
	}
}

// CHECK: 2 errors generated.
